@@ -11,6 +11,7 @@ Version 0.64.3
 xx-xx-201x
 
 - modified WebUI to open Changelog link in a new browser tab/window
+- improved regular expression to determine valid FFmpeg installations (thanks to marc)
 
 Version 0.64.2
 09-12-2013
